MacViews: Implement NSAccessibilityPressAction for Views with clickable roles.

Currently, no NSAccessibilityActions are supported for MacViews. Refactor out
code supporting this for clickable controls inside Blink and re-use the code for
clickable Views.

BUG=679247

Review-Url: https://codereview.chromium.org/2671563002
Cr-Commit-Position: refs/heads/master@{#449519}

Former-commit-id: e8f8ea9d2076848d998001dea1e7b90d7beb83a8